add GA tracking, web pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Tony Pan | Welcome to my site</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105323938-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-105323938-3');
+    </script>
+
   </head>
 
   <body>
@@ -198,7 +208,9 @@
                         <div class="carousel-item col-md-4 active">
                             <div class="card research-card">
                               <div class="card-img-top card-img-top-250">
-                                  <img class="img-fluid" src="images/publication.jpg" alt="SPIE Photonics West">
+                                <figure>
+                                    <img class="img-fluid" src="images/publication.jpg" alt="SPIE Photonics West">
+                                </figure>
                               </div>
                               <div class="card-body">
                                   <h5 class="card-title">Publication</h5>
@@ -211,7 +223,9 @@
                           <div class="carousel-item col-md-4">
                               <div class="card research-card">
                                 <div class="card-img-top card-img-top-250">
-                                    <img class="img-fluid" src="images/weizmann.jpg" alt="Weizmann">
+                                  <figure>
+                                      <img class="img-fluid" src="images/weizmann.jpg" alt="Weizmann">
+                                  </figure>
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Summer Research Fellow</h5>
@@ -221,6 +235,21 @@
                                   </div>
                             </div>
                             </div>
+                            <div class="carousel-item col-md-4">
+                                <div class="card research-card">
+                                  <div class="card-img-top card-img-top-250">
+                                    <figure>
+                                        <img class="img-fluid" src="images/isef.jpg" alt="Intel ISEF">
+                                    </figure>
+                                  </div>
+                                  <div class="card-body">
+                                      <h5 class="card-title">Intel ISEF</h5>
+                                      <p class="card-text">Intel International science and Engineering Fair (ISEF) Finalist</p>
+                                      <a href="isef.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
+                                      <p class="card-text"><small class="text-muted">Competed in May 2018</small></p>
+                                    </div>
+                              </div>
+                              </div>
                   </div>    
             </div>
           </div>
