--- a/weizmann.html
+++ b/weizmann.html
@@ -27,21 +27,19 @@
   <!-- As a link -->
   <nav class="navbar navbar-default navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Tony Pan</a>
+        <a class="navbar-brand" href="#">Tony Pan</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
-            <a class="nav-item nav-link active" href="#">About Me</a>
+            <a class="nav-item nav-link" href="about.html">About Me</a>
     </div>
         </div>
       </div>
     </nav>
-
-
 
 <footer class="page-footer">
   <div class="container">
@@ -51,9 +49,9 @@
           <div class="card-header">
             Links
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
-            <a class="nav-item nav-link active" href="#">About Me</a>
+            <a class="nav-item nav-link" href="about.html">About Me</a>
           </div>
         </div>
         </div>
