--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                   <div class="card-body">
                     <p class="card-text">This course offers a basic understanding of how computers execute programs. 
-                       In EECS 370, you see how a low-level language is executed by the hardware, 
-                       and see how to put together basic, hardware building blocks to form the functional units of a computer. 
-                       You design and "build" simple computers at various levels of detail and describe the hardware in diagrams, 
+                       How a low-level language is executed by the hardware, 
+                       and how to put together basic, hardware building blocks to form the functional units of a computer. 
+                       Design and "build" simple computers at various levels of detail and describe the hardware in diagrams, 
                        finite-state machines, and hardware simulators (written in C).</p>
                   </div>
                 </div>
@@ -215,7 +215,7 @@
                               <div class="card-body">
                                   <h5 class="card-title">Publication</h5>
                                   <p class="card-text">Machine Learning Assisted Blood Vessel Segmentation in Laser Speckle Imaging</p>
-                                  <a href="spie.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
+                                  <a href="spie.html" target="_blank" class="btn btn-primary btn-lg">Details</a>
                                   <p class="card-text"><small class="text-muted">Published in March 2019</small></p>
                                 </div>
                           </div>
@@ -230,7 +230,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Summer Research Fellow</h5>
                                     <p class="card-text">International Summer Science Institute at the Weizamnn Institute of Science</p>
-                                    <a href="weizmann.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
+                                    <a href="weizmann.html" target="_blank" class="btn btn-primary btn-lg">Details</a>
                                     <p class="card-text"><small class="text-muted">Participated in July 2018</small></p>
                                   </div>
                             </div>
@@ -245,7 +245,7 @@
                                   <div class="card-body">
                                       <h5 class="card-title">Intel ISEF</h5>
                                       <p class="card-text">Intel International science and Engineering Fair (ISEF) Finalist</p>
-                                      <a href="isef.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
+                                      <a href="isef.html" target="_blank" class="btn btn-primary btn-lg">Details</a>
                                       <p class="card-text"><small class="text-muted">Competed in May 2018</small></p>
                                     </div>
                               </div>
