--- a/isef.html
+++ b/isef.html
@@ -27,19 +27,67 @@
   <!-- As a link -->
   <nav class="navbar navbar-default navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tony Pan</a>
+        <a class="navbar-brand" href="index.html">Tony Pan</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
     </div>
         </div>
       </div>
     </nav>
+
+    <div class="container">
+            <div class="card" id="spie">
+                    <div class="card-header text-center">
+                    <img src="images/spie-background.jpg" class="img-fluid" alt="SPIE Photonics West conference">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-center">SPIE Photonics West BiOS Conference 2019</h5>
+                        <p class="card-text">I gave an oral presentation for the research project "Machine Learning
+                            Assisted Blood Vessel Segmentation in Laser Speckle Imaging" at the SPIE Photonics West
+                            BiOS Conference during the session "Optical Biopsy XVII: Toward Real-Time Spectroscopic Imaging and Diagnosis"
+                            on February 6th, 2019.</p>
+                        <p>Society of Photo-Optical Instrumentation Engineers (SPIE) annually organizes and sponsors 
+                            approximately 25 major technical forums, exhibitions, and education programs in North America,
+                             Europe, Asia, and the South Pacific. With 2,500 papers and presentations, the SPIE Photonics West BiOS conference 
+                             is the most important biomedical optics conference in the field. Topics include biomedical optics, 
+                             diagnostics and therapeutics, biophotonics, new imaging modalities, optical coherence tomography,
+                              neurophotonics, optogenetics, tissue optics, and nanophotonics.
+                        </p>
+                        <h5 class="card-title text-center">Abstract</h5>
+                        <p>
+                        We are introducing an application of a machine learning approach for express
+                         analysis of Laser Speckle (LS) images. This application can be utilized for 
+                         real-time visualisation of vascular beds in vivo. This research used Waikato
+                          Environment for Knowledge Analysis (Weka) integrated with Fiji/ImageJ software.
+                           A large number of acquired LS images are averaged, then used as references for
+                            training Weka classifiers. Subsequently, a bundle of these Weka classifiers 
+                            are produced. We defined the minimal number of raw LS images based on a 
+                            phenomenological model to minimize the time needed for LS data analysis. 
+                            Finally, a new perceptually uniform color coding approach is developed for 
+                            highlighting targeted blood vessels. The developed LS processing approach is
+                             especially convenient, because of its high potential for blood vessel 
+                             visualisation during real-time intraoperative vascular imaging in vivo.
+                        </p>
+                        <div class="text-center">
+                                <a href="https://doi.org/10.1117/12.2510378" target="_blank" class="btn btn-danger btn-lg">Watch the Presentation at SPIE Digital Library</a>
+                            </div>
+                        <br>
+                        <p>
+                        This research project was conducted at the Weizmann Institute of Science in Israel
+                        under the mentorship of Prof. Vyacheslav Kalchenko as a part of the International 
+                        Summer Science Institute (ISSI) program.
+                        </p>
+                        <a target="_blank" href="weizmann.html" class="card-link">Read about ISSI</a>
+                        <a href="index.html#section2" class="card-link">Go Back</a>
+                    </div>
+                </div>
+    </div>
 
 <footer class="page-footer">
   <div class="container">
@@ -49,7 +97,7 @@
           <div class="card-header">
             Links
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
           </div>
@@ -65,7 +113,7 @@
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
   </div>
-  <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. Photos taken by Tony Pan</div>
+  <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. All rights reserved.</div>
   </div>
 </footer>
 
