--- a/spie.html
+++ b/spie.html
@@ -75,7 +75,7 @@
                              visualisation during real-time intraoperative vascular imaging in vivo.
                         </p>
                         <div class="text-center">
-                                <a href="https://doi.org/10.1117/12.2510378" target="_blank" class="btn btn-danger">Watch the Presentation at SPIE Digital Library</a>
+                                <a href="https://doi.org/10.1117/12.2510378" target="_blank" class="btn btn-danger btn-lg">Watch the Presentation at SPIE Digital Library</a>
                             </div>
                         <br>
                         <p>
@@ -84,7 +84,7 @@
                         Summer Science Institute (ISSI) program.
                         </p>
                         <a target="_blank" href="weizmann.html" class="card-link">Read about ISSI</a>
-                        <a target="_blank" href="index.html#section2" class="card-link">Go Back</a>
+                        <a href="index.html#section2" class="card-link">Go Back</a>
                     </div>
                 </div>
     </div>
