--- a/isef.html
+++ b/isef.html
@@ -10,7 +10,7 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Tony Pan | Welcome to my site</title>
+    <title>Tony Pan | Intel ISEF</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105323938-3"></script>
     <script>
@@ -44,47 +44,78 @@
     <div class="container">
             <div class="card" id="spie">
                     <div class="card-header text-center">
-                    <img src="images/spie-background.jpg" class="img-fluid" alt="SPIE Photonics West conference">
+                    <img src="images/isef-poster.jpg" class="img-fluid" alt="Intel ISEF Poster">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title text-center">SPIE Photonics West BiOS Conference 2019</h5>
-                        <p class="card-text">I gave an oral presentation for the research project "Machine Learning
-                            Assisted Blood Vessel Segmentation in Laser Speckle Imaging" at the SPIE Photonics West
-                            BiOS Conference during the session "Optical Biopsy XVII: Toward Real-Time Spectroscopic Imaging and Diagnosis"
-                            on February 6th, 2019.</p>
-                        <p>Society of Photo-Optical Instrumentation Engineers (SPIE) annually organizes and sponsors 
-                            approximately 25 major technical forums, exhibitions, and education programs in North America,
-                             Europe, Asia, and the South Pacific. With 2,500 papers and presentations, the SPIE Photonics West BiOS conference 
-                             is the most important biomedical optics conference in the field. Topics include biomedical optics, 
-                             diagnostics and therapeutics, biophotonics, new imaging modalities, optical coherence tomography,
-                              neurophotonics, optogenetics, tissue optics, and nanophotonics.
+                        <h5 class="card-title text-center">Intel International Science and Engineering Fair (ISEF)</h5>
+                        <p class="card-text">
+                          I was a finalist and competed in the 2018 Intel ISEF in Pittsburgh in the Materials Science category.
                         </p>
-                        <h5 class="card-title text-center">Abstract</h5>
-                        <p>
-                        We are introducing an application of a machine learning approach for express
-                         analysis of Laser Speckle (LS) images. This application can be utilized for 
-                         real-time visualisation of vascular beds in vivo. This research used Waikato
-                          Environment for Knowledge Analysis (Weka) integrated with Fiji/ImageJ software.
-                           A large number of acquired LS images are averaged, then used as references for
-                            training Weka classifiers. Subsequently, a bundle of these Weka classifiers 
-                            are produced. We defined the minimal number of raw LS images based on a 
-                            phenomenological model to minimize the time needed for LS data analysis. 
-                            Finally, a new perceptually uniform color coding approach is developed for 
-                            highlighting targeted blood vessels. The developed LS processing approach is
-                             especially convenient, because of its high potential for blood vessel 
-                             visualisation during real-time intraoperative vascular imaging in vivo.
-                        </p>
-                        <div class="text-center">
-                                <a href="https://doi.org/10.1117/12.2510378" target="_blank" class="btn btn-danger btn-lg">Watch the Presentation at SPIE Digital Library</a>
-                            </div>
+                        <p class="card-text">The Intel International Science and Engineering Fair (Intel ISEF), 
+                          a program of Society for Science & the Public (the Society), is the world’s largest international
+                           pre-college science competition. Each year, approximately 1,800 high school students from more 80 countries, 
+                           regions, and territories are awarded the opportunity to showcase their independent research and compete for
+                            more than $5 million in prizes. Today, millions of students worldwide compete each year in local and school-sponsored 
+                            science fairs; the winners of these events go on to participate in Society-affiliated regional and state fairs from 
+                            which the best win the opportunity to attend Intel ISEF. Intel ISEF unites these top young scientific minds, showcasing
+                             their talents on an international stage, where doctoral level scientists review and judge their work. </p>
                         <br>
+                        <h5 class="card-title text-center">Project Abstract</h5>
                         <p>
-                        This research project was conducted at the Weizmann Institute of Science in Israel
-                        under the mentorship of Prof. Vyacheslav Kalchenko as a part of the International 
-                        Summer Science Institute (ISSI) program.
-                        </p>
-                        <a target="_blank" href="weizmann.html" class="card-link">Read about ISSI</a>
-                        <a href="index.html#section2" class="card-link">Go Back</a>
+                            Improvements in energy storage devices can help facilitate the implementation of renewable energy resources in collecting energy,
+                             energy storage, and using the energy efficiently. Most energy storage devices today face similar problems: slow charging time,
+                              low power and energy density, safety, and cost. The goal of this research was to address these issues with graphene supercapacitors.
+                            Graphene supercapacitors have fast charging and discharging rates, which not only reduce charging time but also enable better performance.
+                             The improvements in the electrolytes and the pattern design can further increase graphene supercapacitors’ power and energy density. 
+                             Inexpensive graphene supercapacitors can lower the cost of energy storage in solar and wind farms. They also have many more applications 
+                             on a smaller scale. Graphene’s flexibility and transparency give graphene supercapacitors many potential applications in electronic devices
+                              like phones and wearables. Driving down the cost of LSG (laser scribed graphene) and scaling up the production will help make graphene
+                               supercapacitors commercially available.
+                  Although some lithium-ion batteries can achieve fast charging rates, graphene supercapacitors have many more benefits thanks to graphene’s physical properties. 
+                  A gelled electrolyte allows more flexibility and does not have the safety hazard of leakage while a reliable solid electrolyte in batteries is yet to be invented. 
+                  Despite the low-cost associated with sodium-based batteries, the comparative performance of graphene supercapacitors may still be superior.</p>
+                  <p>
+                      This research focused on scalable inexpensive graphene supercapacitors from graphite oxide exfoliated with LightScribe DVD burners. This research demonstrated 
+                      the feasibility of an inexpensive scalable high energy density graphene supercapacitor. The graphene capacitor made with the LightScribe method has a capacitance 
+                      of about 200  . It would take approximately four kilograms of those capacitors in parallel to have one Farad of capacitance. Although my graphene supercapacitors
+                       did not achieve high energy density, they have the potential to with further improvements. The inexpensive and scalable method could be helpful for manufacturers as well.
+                  </p>
+                  <p>
+                      <i>Keywords: energy storage, graphene, capacitor, LightScribe</i>
+                  </p>
+                  <a href="files/ISEF_paper.pdf" class="btn btn-outline-primary">Read my Paper</a>
+                  <a href="files/ISEF_poster.pdf" class="btn btn-outline-primary">See my Poster</a>
+                  <br><br>
+                  <h5 class="card-title text-center">Awards</h5>
+                  <p>Here are the awards that I won with this project at the local and state level:</p>
+                  <dl class="row">
+                      <dt class="col-sm-3">Science and Engineering Fair of Metro Detroit (SEFMD)</dt>
+                      <dd class="col-sm-9">
+                          <ul style="list-style-type:disc;">
+                              <li>Grand Award</li>
+                              <li>1st place from IEEE Southeastern Michigan Section and $100</li>
+                              <li>1st place from ASM-Detroit Chapter</li>
+                              <li>1st place in the Materials Science category</li>
+                              <li>Weizmann Institute of Science Award for 2018*</li>
+                            </ul>
+                      </dd>
+                      <dt class="col-sm-3">Michigan Science and Engineering Fair (MSEF)</dt>
+                      <dd class="col-sm-9">
+                          <ul style="list-style-type:disc;">
+                              <li>3rd place and $50</li>
+                              <li>NASA Earth System Science Award</li>
+                            </ul>
+                      </dd>
+                    </dl>
+                    <p>*The Weizmann Award was a scholarship to conduct research at Weizmann Institute of Science
+                      in Israel through the International Summer Science Institute (ISSI).
+                    </p>
+                    <br>
+                    <p>This project was conducted at my high school as a part of the Academic Research Program.
+                      Here are some details from the <a target="_blank" href="https://www.uls.org/news-detail?pk=1171379">school website</a>.
+                    </p>
+                  <a target="_blank" href="weizmann.html" class="card-link">Read about ISSI</a>
+                  <a href="index.html#section2" class="card-link">Go Back</a>
                     </div>
                 </div>
     </div>
