--- a/spie.html
+++ b/spie.html
@@ -10,7 +10,7 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Tony Pan | Welcome to my site</title>
+    <title>Tony Pan | Publication</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105323938-3"></script>
     <script>
