edited programming added research

--- a/index.html
+++ b/index.html
@@ -250,6 +250,30 @@
                                     </div>
                               </div>
                               </div>
+                              <div class="carousel-item col-md-4">
+                                  <div class="card research-card">
+                                    <div class="card-img-top card-img-top-250">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title">Shtein Lab</h5>
+                                        <p class="card-text">Develope hardware and software for a kirigami sensor project</p>
+                                        <p class="card-text">Design, build, and program a novel 3D printer</p>
+                                        <a href="https://shteinlab.engin.umich.edu/profile/tony-pan/" target="_blank" class="btn btn-outline-primary">Shtein Lab</a>
+                                        <p class="card-text"><small class="text-muted">November 2018 - present</small></p>
+                                      </div>
+                                </div>
+                                </div>
+                                <div class="carousel-item col-md-4">
+                                    <div class="card research-card">
+                                      <div class="card-img-top card-img-top-250">
+                                      </div>
+                                      <div class="card-body">
+                                          <h5 class="card-title">SOAR Cognitive Architecture</h5>
+                                          <p class="card-text">Integrate SOAR cognitive architecture with Anki's Cozmo robots</p>
+                                          <p class="card-text"><small class="text-muted">January 2019 - present</small></p>
+                                        </div>
+                                  </div>
+                                  </div>
                   </div>    
             </div>
           </div>
@@ -280,16 +304,55 @@
                   <div class="col-8">
                     <div class="tab-content" id="nav-tabContent">
                       <div class="tab-pane fade active show" id="list-research" role="tabpanel" aria-labelledby="list-research-list">
-                        <p>Velit aute mollit ipsum ad dolor consectetur nulla officia culpa adipisicing exercitation fugiat tempor. Voluptate deserunt sit sunt nisi aliqua fugiat proident ea ut. Mollit voluptate reprehenderit occaecat nisi ad non minim tempor sunt voluptate consectetur exercitation id ut nulla. Ea et fugiat aliquip nostrud sunt incididunt consectetur culpa aliquip eiusmod dolor. Anim ad Lorem aliqua in cupidatat nisi enim eu nostrud do aliquip veniam minim.</p>
+                        <h6>Shtein Lab</h6>  
+                        <ul style="list-style-type:disc;">
+                              <li>Embedded programming for Particle Photon for a kirigami sensor in C/C++</li>
+                              <li>Embedded programming with Marlin firmware in the Arduino environment for a 3D printer
+                                and Printrun user interface in Python
+                              </li>
+                            </ul>
+                        <h6>SOAR Cognitive Architecture</h6>  
+                        <ul style="list-style-type:disc;">
+                              <li>Write robotics code to control Anki Cozmo robots in Python</li>
+                              <li>Write SOAR production code to integrate with Cozmo robots</li>
+                            </ul>
+                        <h6>Weizmann ISSI</h6>  
+                        <ul style="list-style-type:disc;">
+                              <li>Wrote ImageJ Macro and Java programs to create montages with different color maps</li>
+                              <li>Trained binary classifiers on FIJI and applied them on stacks with higher statistical noise</li>
+                            </ul>
                       </div>
                       <div class="tab-pane fade" id="list-Websites" role="tabpanel" aria-labelledby="list-Websites-list">
-                        <p>Cupidatat quis ad sint excepteur laborum in esse qui. Et excepteur consectetur ex nisi eu do cillum ad laborum. Mollit et eu officia dolore sunt Lorem culpa qui commodo velit ex amet id ex. Officia anim incididunt laboris deserunt anim aute dolor incididunt veniam aute dolore do exercitation. Dolor nisi culpa ex ad irure in elit eu dolore. Ad laboris ipsum reprehenderit irure non commodo enim culpa commodo veniam incididunt veniam ad.</p>
+                          <p>
+                            <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://tonypan2000.github.io/Haystack">Haystack</a><br>
+                              HTML, Javascript, PHP, and SQL website built for a proposed student organization.
+                              <br><br><br><br>
+                            <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://frc3175.github.io/Team-Website/">FRC 3175 Team Website</a><br>
+                              HTML and PHP website built for my high school robotics team. The site includes several 
+                              <a target="_blank" href="https://frc3175.github.io/Team-Website/tutorials.html">tutorials</a>
+                              teaching middle schoolers how to do robotics.
+                          </p>
                       </div>
                       <div class="tab-pane fade" id="list-Java" role="tabpanel" aria-labelledby="list-Java-list">
-                        <p>Ut ut do pariatur aliquip aliqua aliquip exercitation do nostrud commodo reprehenderit aute ipsum voluptate. Irure Lorem et laboris nostrud amet cupidatat cupidatat anim do ut velit mollit consequat enim tempor. Consectetur est minim nostrud nostrud consectetur irure labore voluptate irure. Ipsum id Lorem sit sint voluptate est pariatur eu ad cupidatat et deserunt culpa sit eiusmod deserunt. Consectetur et fugiat anim do eiusmod aliquip nulla laborum elit adipisicing pariatur cillum.</p>
+                          <p><a class="btn btn-outline-primary btn-lg" target="_blank" href="https://github.com/tonypan2000/MulticulturalTV">Multicultural TV</a><br>
+                        Streams multiple Youtube channels on one screen, made it for a large TV screen in my high school
+                        <br><br>
+                        <a class="btn btn-outline-primary btn-lg" target="_blank" href="https://github.com/tonypan2000/FRC-2018-Scouting">FRC Scouting App</a><br>                          
+                        Helps FRC teams observe the performance of other teams by gathering statistics during mathces, built for my high school robotics team
+                        <br><br>
+                        <a class="btn btn-outline-primary btn-lg" target="_blank" href="#">Breakout Extra</a><br>                          
+                        Brick breaker game written as an extension to a coding assignment in Stanford CS 106A Programming Methodology.
+                        <br><br>
+                        <a class="btn btn-outline-primary btn-lg" target="_blank" href="#">Wheel of Fortune</a><br>                          
+                        Wheel of Fortune was an extension to the Hangman coding project in Stanford CS 106A
+                        <br><br>
+                        </p>
                       </div>
                       <div class="tab-pane fade" id="list-Other" role="tabpanel" aria-labelledby="list-Other-list">
-                        <p>Irure enim occaecat labore sit qui aliquip reprehenderit amet velit. Deserunt ullamco ex elit nostrud ut dolore nisi officia magna sit occaecat laboris sunt dolor. Nisi eu minim cillum occaecat aute est cupidatat aliqua labore aute occaecat ea aliquip sunt amet. Aute mollit dolor ut exercitation irure commodo non amet consectetur quis amet culpa. Quis ullamco nisi amet qui aute irure eu. Magna labore dolor quis ex labore id nostrud deserunt dolor eiusmod eu pariatur culpa mollit in irure.</p>
+                        <p>Programming Languages:<br>
+                        C/C++, Java, Git, HTML, Python, ImageJ Macro, SOAR, Linux, MATLAB, Assembly, Ruby<br><br><br><br>
+                        Industry Knowledge:<br>
+                        Robotics, Research, Web Dev, Software Engineering</p>
                       </div>
                     </div>
                   </div>
