added aboutme page

--- a/about.html
+++ b/about.html
@@ -41,7 +41,17 @@
       </div>
     </nav>
 
-
+    <header class="page-header header container-fluid background">
+        <div class="overlay"></div>
+        <div class="description">
+            <h1>Coming Soon!!</h1>
+            <p>Nice to meet you! This page will contain more personal facts about me, 
+              including my travel blogs and photos, piano videos, and opinion posts etc.
+              It will be available soon!
+              Meanwhile, please go to my <a href="index.html">home page</a>. Thanks!
+            </p>
+        </div>
+    </header>
 
 <footer class="page-footer">
   <div class="container">
